improve caculations